simplify pub list

--- a/project/warmer-mountains/index.html
+++ b/project/warmer-mountains/index.html
@@ -303,7 +303,7 @@ For the main component of my doctoral research, in collaboration with Loic Pelli
 
 <p>We moved alpine turfs downslope along an elevational gradient in the eastern Swiss Alps to impose increasing degrees of climate warming, similar to what these plant communities will experience in the following 100 years of climate change.</p>
 
-<p><a href="https://www.youtube.com/watch?v=-aKZhiICIRY" target="_blank">Watch</a> a Swiss News report about the experiment.</p>
+<p>Below you can watch a Swiss News report about the experiment.</p>
 
 <!-- blank line -->
 
